elide-model-config/src/test/resources/validator/invalid_schema/db_invalid.hjson
{
  dbconfigs:
  [
    {
      name: 11MyDB2Connection
      url: jdbc:db2:localhost:50000/testdb
      driver: 11COM.ibm.db2.jdbc.net.DB2Driver
      user: guestdb2
      dialect: com.paiondata.elide.datastores.aggregation.queryengines.sql.dialects.impl.PrestoDBDialec
      propertyMap:
      {
        hibernate.show_sql: null
        hibernate.default_batch_fetch_size: 100.1
        hibernate.hbm2ddl.auto: create
      }
    }
    {
      name: MySQLConnection
      url: ojdbc:mysql://localhost/testdb?serverTimezone=UTC
      driver: com.mysql.jdbc.Driver
      user: guestmysql
      dialect: 1234
    }
  ]
}
